# MuroChat-Backend

./: .gitignore  .pre-commit-config.yaml  .pylintrc  BaseDockerfile  CONTRIBUTING.md  Dockerfile  README.md  buildspec.yml  env.placeholder  extract-secrets.py  manage.py  mypy.ini  pyproject.toml  start.sh  startup.sh
app_wrapper/: commonService.py  llamaService.py  utils.py
chats/: urls.py
chats/dao/: ChatDao.py  ChatHistoryDao.py  LlmModelDao.py  UserChatShareDao.py
chats/data_firewall/: DataFirewall.py  util.py
chats/services/: chatService.py
chats/views/: chatview.py
config/nginx/: private-gpt-backend.conf
config/uwsgi/: private-gpt-backend.ini
middlewares/: PasswordLessLogin.py
migrations/chats/: chats_config.ini
migrations/idp/: idp_config.ini
mongodbusers/: .gitignore  idp_orig.js  mongo_users_orig.js  mongodb_create_users.sh
private_gpt/: asgi.py  checks.py  settings.py  urls.py  wsgi.py
private_gpt/settings_configuration/: base.py  prod.py  qa.py
scripts/: copy_file.sh
stats/: StatsDao.py
templates/emails/: shareChat.html
users/: TokenHandler.py  models.py  serializer.py  tests.py  urls.py
users/dao/: idpConfig.py  idpRoleMappingDao.py  (+1 more)
utils/: Dictonary.py  EmailClient.py  HttpClient.py  MongoConnection.py  Path.py  PermissionDecorator.py  Permissions.py  RootMongoConnection.py  Slack.py  TokenExpiryAuthentication.py  TokenUtil.py  accessorUtils.py  cryptoClient.py  dateTimeUtils.py  djangoEmailClient.py  fields.py  paginationUtils.py  requestHeaderParser.py  requestValidator.py  responseFormatter.py  tokenHandler.py  uuid.py
(+4 files in other folders)
